--- a/SJKT.vcxproj.filters
+++ b/SJKT.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="Game\playerselect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\fighter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Display\animation.h">
@@ -282,6 +285,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\playerselect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\fighter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
