--- a/SJKT.vcxproj.filters
+++ b/SJKT.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="Game\matchover.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\settingsmenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Display\animation.h">
@@ -300,6 +303,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\matchover.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\settingsmenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
