--- a/SJKT.vcxproj.filters
+++ b/SJKT.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="Game\settingsmenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\roundcountin.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Display\animation.h">
@@ -306,6 +309,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\settingsmenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\roundcountin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
