--- a/SJKT.vcxproj
+++ b/SJKT.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="Game\matchover.cpp" />
     <ClCompile Include="Game\menu.cpp" />
     <ClCompile Include="Game\playerselect.cpp" />
+    <ClCompile Include="Game\roundcountin.cpp" />
     <ClCompile Include="Game\roundover.cpp" />
     <ClCompile Include="Game\settingsmenu.cpp" />
   </ItemGroup>
@@ -179,6 +180,7 @@
     <ClInclude Include="Game\matchover.h" />
     <ClInclude Include="Game\menu.h" />
     <ClInclude Include="Game\playerselect.h" />
+    <ClInclude Include="Game\roundcountin.h" />
     <ClInclude Include="Game\roundover.h" />
     <ClInclude Include="Game\settingsmenu.h" />
   </ItemGroup>
