--- a/SJKT.vcxproj.filters
+++ b/SJKT.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="Game\roundcountin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\networkmenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Display\animation.h">
@@ -312,6 +315,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\roundcountin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\networkmenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
