--- a/SJKT.vcxproj.filters
+++ b/SJKT.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="Game\networkmenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Framework\Primitives\vector2i.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Display\animation.h">
@@ -321,6 +324,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\networkpacket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Framework\Primitives\vector2i.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
