--- a/SJKT.cbp
+++ b/SJKT.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/SJKT" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/SJKTdebug" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
