--- a/SJKT.vcxproj.filters
+++ b/SJKT.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="Framework\Primitives\vector2i.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\settingskeyset.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Display\animation.h">
@@ -327,6 +330,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Framework\Primitives\vector2i.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\settingskeyset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
